LU-11165 llite: set iflags and catch error from md_setattr() properly

As John Hammond pointed out:
In ll_ioctl_fssetxattr() we may discard errors from md_setattr().
And we only set the local i_flags when lli_clob is not NULL.

This patch tried to address above problems.

Test-Parameters: trivial testlist=sanity-quota
Change-Id: Ib65ec61932b00f71367a8da6be67e3f94ebd5005
Signed-off-by: Wang Shilong <wshilong@ddn.com>
Reviewed-on: https://review.whamcloud.com/32860
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: John L. Hammond <jhammond@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>